--- a/css/styles.scss
+++ b/css/styles.scss
@@ -17,6 +17,10 @@
   }
 }
 
+.white {
+  color: #fff !important;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -702,7 +706,8 @@ menu {
 
   .one,
   .one a {
-    height: 250px;
+    height: 100%;
+    min-height: 250px;
     display: block;
     overflow: hidden;
 
@@ -1050,7 +1055,7 @@ menu {
 }
 
 .title_h3 {
-  color: #fff;
+  color: #0e294a;
   font-family: Montserrat;
   font-size: 20px;
   font-weight: 600;
